index.html is completed

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <!-- <button id="btn" onclick="alert('Heyy buddy!!')">Say Hello !</button> -->
-        <!-- <button id="btn1" onclick=" sayHello()">button 1</button> -->
-        <button id="btn2" ></button>
-        <h6>Box clicked 0 times</h6>
-        
-            <script type="text/javascript" src="script.js"></script>
-
-    </body>
+<html lang="en">
+<head>
+    <title>Click Count</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="box"></div>
+    <h6>
+        Box Clicked <span id="click-count">0</span> times
+    </h6>
+    <script src="script.js"></script>
+</body>
 </html>
